fix: handle password history policy violation during user updates