@@ -33,7 +33,6 @@ import de.adorsys.keycloak.config.util.KeycloakUtil;
 import org.keycloak.representations.idm.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
@@ -41,6 +40,8 @@ import org.springframework.util.StringUtils;
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+
+import jakarta.ws.rs.BadRequestException;
 
 @Service
 @ConditionalOnProperty(prefix = "run", name = "operation", havingValue = "IMPORT", matchIfMissing = true)
@@ -58,7 +59,6 @@ public class UserImportService {
 
     private final ImportConfigProperties importConfigProperties;
 
-    @Autowired
     public UserImportService(
             RealmRepository realmRepository, UserRepository userRepository,
             RoleRepository roleRepository,
@@ -156,22 +156,74 @@ public class UserImportService {
                 patchedUser.setAttributes(userToImport.getAttributes());
             }
 
+            boolean hasPasswordUpdate = false;
             if (patchedUser.getCredentials() != null) {
                 // do not override password, if userLabel is set "initial"
                 List<CredentialRepresentation> userCredentials = patchedUser.getCredentials().stream()
                         .filter(credentialRepresentation -> !Objects.equals(
                                 credentialRepresentation.getUserLabel(), USER_LABEL_FOR_INITIAL_CREDENTIAL
                         ))
-                        .toList();
+                        .collect(Collectors.toList());
                 patchedUser.setCredentials(userCredentials.isEmpty() ? null : userCredentials);
+
+                hasPasswordUpdate = userCredentials.stream()
+                        .anyMatch(cred -> CredentialRepresentation.PASSWORD.equals(cred.getType()));
             }
 
             if (!CloneUtil.deepEquals(existingUser, patchedUser, "access")) {
                 logger.debug("Update user '{}' in realm '{}'", userToImport.getUsername(), realmName);
-                userRepository.updateUser(realmName, patchedUser);
+                try {
+                    userRepository.updateUser(realmName, patchedUser);
+                } catch (BadRequestException e) {
+                    if (hasPasswordUpdate) {
+                        tryToUpdateUserWithoutPassword(e, patchedUser);
+                    } else {
+                        throw e;
+                    }
+                }
             } else {
                 logger.debug("No need to update user '{}' in realm '{}'", userToImport.getUsername(), realmName);
             }
+        }
+
+        private void tryToUpdateUserWithoutPassword(BadRequestException e, UserRepresentation patchedUser) {
+            String errorMessage = de.adorsys.keycloak.config.util.ResponseUtil.getErrorMessage(e);
+            logger.warn("Failed to update user '{}' in realm '{}': {}", userToImport.getUsername(), realmName, errorMessage);
+
+            if (isPasswordHistoryViolation(errorMessage)) {
+                logger.warn("Password policy violation detected for user '{}' in realm '{}'. "
+                                + "Attempting to update without changing the password...",
+                        userToImport.getUsername(), realmName);
+
+                // Remove password update from credentials
+                if (patchedUser.getCredentials() != null) {
+                    List<CredentialRepresentation> credentialsWithoutPassword = patchedUser.getCredentials().stream()
+                            .filter(cred -> !CredentialRepresentation.PASSWORD.equals(cred.getType()))
+                            .collect(Collectors.toList());
+                    patchedUser.setCredentials(credentialsWithoutPassword.isEmpty() ? null : credentialsWithoutPassword);
+                }
+
+                try {
+                    userRepository.updateUser(realmName, patchedUser);
+                    logger.info("Successfully updated user '{}' in realm '{}'. "
+                                    + "WARNING: Password was NOT updated due to policy violation, but all other attributes were applied.",
+                            userToImport.getUsername(), realmName);
+                } catch (Exception innerException) {
+                    logger.error("Failed to update user '{}' in realm '{}' even without password change.",
+                            userToImport.getUsername(), realmName, innerException);
+                    throw innerException;
+                }
+            } else {
+                throw e;
+            }
+        }
+
+        private boolean isPasswordHistoryViolation(String errorMessage) {
+            if (errorMessage == null) return false;
+            String lowerCaseError = errorMessage.toLowerCase();
+            return lowerCaseError.contains("invalidpasswordhistorymessage")
+                    || lowerCaseError.contains("password history")
+                    || lowerCaseError.contains("passwordpolicynotmetexception");
         }
 
         private void handleGroups() {
